--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;500&display=swap" rel="stylesheet">
     <title>App Landing Page</title>
 </head>
 
 <body>
-
+    <div class="container">
+        <header>
+            <div class="headerTopWrapper">
+                <div class="headerTopWrapperContactButtons">
+                    <span class="contactButtonsContant">
+                        <img src="./assets/icons/mail-fill.svg" alt="">
+                        <p>Info@youremail.com</p>
+                    </span>
+                    <span class="contactButtonsContant">
+                        <img src="./assets/icons/phone-fill.svg" alt="">
+                        <p>(480) 555-0103</p>
+                    </span>
+                    <span class="contactButtonsContant"></span>
+                </div>
+                <div class="headerTopWrapperSocialMidiasButtons">
+                    <div class="socialMidiasButtonsContant">
+                        <img src="./assets/icons/facebook-fill.svg" alt="">
+                        <img src="./assets/icons/instagram-fill.svg" alt="">
+                        <img src="./assets/icons/twitter-fill.svg" alt="">
+                        <img src="./assets/icons/youtube-fill.svg" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="headerBottomWrapper">
+                <span>
+                    <a href="#" class="headerBottomWrapperNavBarButton">HOME</a>
+                    <a href="#" class="headerBottomWrapperNavBarButton">ABOUT</a>
+                    <a href="#" class="headerBottomWrapperNavBarButton">FEATURES</a>
+                </span>
+                <a href="#" class="headerBottomWrapperApollyButton">
+                    <img src="./assets/icons/logo.svg" alt="">
+                </a>
+                <span>
+                    <a href="#" class="headerBottomWrapperNavBarButton">SCREENSHOT</a>
+                    <a href="#" class="headerBottomWrapperNavBarButton">BLOG</a>
+                    <a href="#" class="headerBottomWrapperNavBarDownloadButton">DOWNLOAD</a>
+                </span>
+            </div>
+        </header>
+    </div>
 </body>
 
 </html>
