--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
             </div>
             <div class="headerBottomWrapper">
                 <span>
-                    <a href="#" class="headerBottomWrapperNavBarButton">HOME</a>
+                    <a href="#homeSection" class="headerBottomWrapperNavBarButton">HOME</a>
                     <a href="#" class="headerBottomWrapperNavBarButton">ABOUT</a>
                     <a href="#" class="headerBottomWrapperNavBarButton">FEATURES</a>
                 </span>
@@ -51,6 +51,27 @@
                 </span>
             </div>
         </header>
+        <section class="homeSection" id="homeSection">
+            <div class="homeSectionLeftWrapper">
+                <div class="homeSectionLeftWrapperBoxContant">
+                    <h1>A Great App Makes Your Life Better</h1>
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                        duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                    </p>
+                    <div>
+                        <h2>DOWNLOAD APP NOW</h2>
+                        <div>
+                            <img src="./assets/apps/play-store-app copy.svg" alt="">
+                            <img src="./assets/apps/apple-store-app.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <img src="./assets/background/bg-rectangle.svg" alt="">
+            </div>
+            <div class="homeSectionRigthWrapper">
+                <img src="./assets/background/mabile-app-mockup.svg" alt="">
+            </div>
+        </section>
     </div>
 </body>
 
