feat: about section include

--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,54 @@
                 <img src="./assets/background/bg-rectangle.svg" alt="">
             </div>
             <div class="homeSectionRigthWrapper">
-                <img src="./assets/background/mabile-app-mockup.svg" alt="">
+                <img src="./assets/background/mobile-app-mockup.svg" alt="">
+            </div>
+        </section>
+        <section class="aboutSection">
+            <h1>ABOUT OUR APP</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae. Est tellus vitae,
+                nullam lobortis enim. Faucibus amet etiam tincidunt rhoncus, ullamcorper velit. Ullamcorper risus
+                tempor, ac nunc libero urna, feugiat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra
+                nunc ante velit vitae. Est tellus vitae, nullam lobortis enim. Faucibus amet etiam tincidunt rhoncus,
+                ullamcorper velit. Ullamcorper risus tempor, ac nunc libero urna, feugiat.
+            </p>
+            <div class="aboutSectionBottomContainer">
+                <div class="aboutSectionBottomContainerLeftWrapper">
+                    <img src="./assets/background/adroid-smartphone-free-mockup.svg"
+                        alt="adroid-smartphone-free-mockup">
+                </div>
+                <div class="aboutSectionBottomContainerRigthWrapper">
+                    <div class="aboutSectionTextBoxContant">
+                        <div>
+                            <img src="./assets/icons/checkbox-circle-fill.svg" alt="checkbox-circle-fill">
+                            <h2>CREATIVE DESIGN</h2>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae. Est
+                            tellus vitae, nullam lobortis enim. Faucibus amet etiam tincidunt rhoncus, ullamcorper
+                            velit.
+                        </p>
+                    </div>
+                    <div class="aboutSectionTextBoxContant">
+                        <div>
+                            <img src="./assets/icons/checkbox-circle-fill.svg" alt="checkbox-circle-fill">
+                            <h2>EASY TO USE</h2>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae. Est
+                            tellus vitae, nullam lobortis enim. Faucibus amet etiam tincidunt rhoncus, ullamcorper
+                            velit.
+                        </p>
+                    </div>
+                    <div class="aboutSectionTextBoxContant">
+                        <div>
+                            <img src="./assets/icons/checkbox-circle-fill.svg" alt="checkbox-circle-fill">
+                            <h2>BEST USER EXPERINCE</h2>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae. Est
+                            tellus vitae, nullam lobortis enim. Faucibus amet etiam tincidunt rhoncus, ullamcorper
+                            velit.
+                        </p>
+                    </div>
+                </div>
             </div>
         </section>
     </div>
