feat: features section include

--- a/src/index.html
+++ b/src/index.html
@@ -38,8 +38,8 @@
             <div class="headerBottomWrapper">
                 <span>
                     <a href="#homeSection" class="headerBottomWrapperNavBarButton">HOME</a>
-                    <a href="#" class="headerBottomWrapperNavBarButton">ABOUT</a>
-                    <a href="#" class="headerBottomWrapperNavBarButton">FEATURES</a>
+                    <a href="#aboutSection" class="headerBottomWrapperNavBarButton">ABOUT</a>
+                    <a href="#featuresSection" class="headerBottomWrapperNavBarButton">FEATURES</a>
                 </span>
                 <a href="#" class="headerBottomWrapperApollyButton">
                     <img src="./assets/icons/logo.svg" alt="">
@@ -51,74 +51,131 @@
                 </span>
             </div>
         </header>
-        <section class="homeSection" id="homeSection">
-            <div class="homeSectionLeftWrapper">
-                <div class="homeSectionLeftWrapperBoxContant">
-                    <h1>A Great App Makes Your Life Better</h1>
-                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
-                        duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
-                    </p>
-                    <div>
-                        <h2>DOWNLOAD APP NOW</h2>
+        <main>
+            <section class="homeSection" id="homeSection">
+                <div class="homeSectionLeftWrapper">
+                    <div class="homeSectionLeftWrapperBoxContant">
+                        <h1>A Great App Makes Your Life Better</h1>
+                        <p class="gray-paragraphs">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+                            sint. Velit officia
+                            consequat
+                            duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                        </p>
                         <div>
-                            <img src="./assets/apps/play-store-app copy.svg" alt="">
-                            <img src="./assets/apps/apple-store-app.svg" alt="">
+                            <h2>DOWNLOAD APP NOW</h2>
+                            <div>
+                                <img src="./assets/apps/play-store-app copy.svg" alt="">
+                                <img src="./assets/apps/apple-store-app.svg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <img src="./assets/background/bg-rectangle.svg" alt="">
+                </div>
+                <div class="homeSectionRigthWrapper">
+                    <img src="./assets/background/mobile-app-mockup.svg" alt="">
+                </div>
+            </section>
+            <section class="aboutSection" id="aboutSection">
+                <h1>ABOUT OUR APP</h1>
+                <p class="gray-paragraphs">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante
+                    velit vitae. Est tellus
+                    vitae,
+                    nullam lobortis enim. Faucibus amet etiam tincidunt rhoncus, ullamcorper velit. Ullamcorper risus
+                    tempor, ac nunc libero urna, feugiat. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Viverra
+                    nunc ante velit vitae. Est tellus vitae, nullam lobortis enim. Faucibus amet etiam tincidunt
+                    rhoncus,
+                    ullamcorper velit. Ullamcorper risus tempor, ac nunc libero urna, feugiat.
+                </p>
+                <div class="aboutSectionBottomContainer">
+                    <div class="aboutSectionBottomContainerLeftWrapper">
+                        <img src="./assets/background/adroid-smartphone-free-mockup.svg"
+                            alt="adroid-smartphone-free-mockup">
+                    </div>
+                    <div class="aboutSectionBottomContainerRigthWrapper">
+                        <div class="aboutSectionTextBoxContant">
+                            <div>
+                                <img src="./assets/icons/checkbox-circle-fill.svg" alt="checkbox-circle-fill">
+                                <h2>CREATIVE DESIGN</h2>
+                            </div>
+                            <p class="gray-paragraphs">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra
+                                nunc ante velit vitae.
+                                Est
+                                tellus vitae, nullam lobortis enim. Faucibus amet etiam tincidunt rhoncus, ullamcorper
+                                velit.
+                            </p>
+                        </div>
+                        <div class="aboutSectionTextBoxContant">
+                            <div>
+                                <img src="./assets/icons/checkbox-circle-fill.svg" alt="checkbox-circle-fill">
+                                <h2>EASY TO USE</h2>
+                            </div>
+                            <p class="gray-paragraphs">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra
+                                nunc ante velit vitae.
+                                Est
+                                tellus vitae, nullam lobortis enim. Faucibus amet etiam tincidunt rhoncus, ullamcorper
+                                velit.
+                            </p>
+                        </div>
+                        <div class="aboutSectionTextBoxContant">
+                            <div>
+                                <img src="./assets/icons/checkbox-circle-fill.svg" alt="checkbox-circle-fill">
+                                <h2>BEST USER EXPERINCE</h2>
+                            </div>
+                            <p class="gray-paragraphs">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra
+                                nunc ante velit vitae.
+                                Est
+                                tellus vitae, nullam lobortis enim. Faucibus amet etiam tincidunt rhoncus, ullamcorper
+                                velit.
+                            </p>
                         </div>
                     </div>
                 </div>
-                <img src="./assets/background/bg-rectangle.svg" alt="">
-            </div>
-            <div class="homeSectionRigthWrapper">
-                <img src="./assets/background/mobile-app-mockup.svg" alt="">
-            </div>
-        </section>
-        <section class="aboutSection">
-            <h1>ABOUT OUR APP</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae. Est tellus vitae,
-                nullam lobortis enim. Faucibus amet etiam tincidunt rhoncus, ullamcorper velit. Ullamcorper risus
-                tempor, ac nunc libero urna, feugiat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra
-                nunc ante velit vitae. Est tellus vitae, nullam lobortis enim. Faucibus amet etiam tincidunt rhoncus,
-                ullamcorper velit. Ullamcorper risus tempor, ac nunc libero urna, feugiat.
-            </p>
-            <div class="aboutSectionBottomContainer">
-                <div class="aboutSectionBottomContainerLeftWrapper">
-                    <img src="./assets/background/adroid-smartphone-free-mockup.svg"
-                        alt="adroid-smartphone-free-mockup">
-                </div>
-                <div class="aboutSectionBottomContainerRigthWrapper">
-                    <div class="aboutSectionTextBoxContant">
-                        <div>
-                            <img src="./assets/icons/checkbox-circle-fill.svg" alt="checkbox-circle-fill">
-                            <h2>CREATIVE DESIGN</h2>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae. Est
-                            tellus vitae, nullam lobortis enim. Faucibus amet etiam tincidunt rhoncus, ullamcorper
-                            velit.
-                        </p>
+            </section>
+            <section class="featuresSection" id="featuresSection">
+                <h1>APP FEATURES</h1>
+                <p class="white-paragraphs">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante
+                    velit vitae. Est tellus
+                    vitae, nullam lobortis enim. Faucibus amet etiam tincidunt rhoncus, ullamcorper velit. Ullamcorper
+                    risus tempor, ac nunc libero urna, feugiat.
+                </p>
+
+                <div class="featuresSectionAppInterface">
+                    <div class="featuresSectionAppInterfaceSurfacesTextBox text-box1">
+                        <img src="./assets/icons/comment-icon.svg" alt="comment-icon">
+                        <h4>FULL FREE CHAT</h4>
+                        <p class="white-paragraphs">Lorem ipsum dolor sit amet, consectetur <br>adipiscing elit.</p>
                     </div>
-                    <div class="aboutSectionTextBoxContant">
-                        <div>
-                            <img src="./assets/icons/checkbox-circle-fill.svg" alt="checkbox-circle-fill">
-                            <h2>EASY TO USE</h2>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae. Est
-                            tellus vitae, nullam lobortis enim. Faucibus amet etiam tincidunt rhoncus, ullamcorper
-                            velit.
-                        </p>
+                    <div class="featuresSectionAppInterfaceLeftSideTextBox text-box2">
+                        <img src="./assets/icons/browser-icon.svg" alt="browser-icon-icon">
+                        <h4>UNLIMITER FEATURES</h4>
+                        <p class="white-paragraphs">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     </div>
-                    <div class="aboutSectionTextBoxContant">
-                        <div>
-                            <img src="./assets/icons/checkbox-circle-fill.svg" alt="checkbox-circle-fill">
-                            <h2>BEST USER EXPERINCE</h2>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae. Est
-                            tellus vitae, nullam lobortis enim. Faucibus amet etiam tincidunt rhoncus, ullamcorper
-                            velit.
-                        </p>
+                    <img src="./assets/background/app-interface.png" alt="app-interface" class="text-box3">
+                    <div class="featuresSectionAppInterfaceRigthSideTextBox text-box4">
+                        <img src="./assets/icons/cell-phone-icon.svg" alt="cell-phone-icon">
+                        <h4>ISO & ANDROID VERSION</h4>
+                        <p class="white-paragraphs">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                    <div class="featuresSectionAppInterfaceLeftSideTextBox text-box5">
+                        <img src="./assets/icons/vector-icon.svg" alt="vector-phone-icon">
+                        <h4>AWSOME UI DESIGN</h4>
+                        <p class="white-paragraphs">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                    <div class="featuresSectionAppInterfaceRigthSideTextBox text-box6">
+                        <img src="./assets/icons/eye-scanner-icon.svg" alt="eye-scanner-phone-icon">
+                        <h4>RETINA READY GRAPHICS</h4>
+                        <p class="white-paragraphs">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                    <div class="featuresSectionAppInterfaceSurfacesTextBox text-box7">
+                        <img src="./assets/icons/telemarket-icon.svg" alt="telemarket-icon">
+                        <h4>24/7 SUPORT BY REAL PEOPLE</h4>
+                        <p class="white-paragraphs">Lorem ipsum dolor sit amet, consectetur<br> adipiscing elit.</p>
                     </div>
                 </div>
-            </div>
-        </section>
+            </section>
+        </main>
+        <footer></footer>
     </div>
 </body>
 
