feat: section include

--- a/src/index.html
+++ b/src/index.html
@@ -175,7 +175,74 @@
                 </div>
             </section>
         </main>
-        <footer></footer>
+        <footer>
+            <div class="footerTopWrapper">
+                <div class="footerTopWrapperLeftTextBox">
+                    <span>
+                        <img src="./assets/icons/mail-fill.svg" alt="mail-fill">
+                    </span>
+                    <p>info@youremail.com</p>
+                </div>
+                <hr>
+                <div class="footerTopWrapperRigthTextBox">
+                    <span>
+                        <img src="./assets/icons/phone-fill.svg" alt="mail-fill">
+                    </span>
+                    <p>+880 321 655 9985</p>
+                </div>
+            </div>
+            <div class="footerMainWrapper">
+                <div class="footerBottomWrapperLogoArea">
+                    <span>
+                        <h2>LOGO</h2>
+                        <br>
+                        <p class="white-paragraphs">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra
+                            nunc ante velit vitae. Est tellus vitae, nullam lobortis enim.
+                        </p>
+                    </span>
+                    <div class="footerBottomWrapperLogoAreaIcons">
+                        <img src="./assets/icons/purple-facebook-fill.svg" alt="facebook-fill">
+                        <hr>
+                        <img src="./assets/icons/instagram-fill.svg" alt="instagram-fill">
+                        <hr>
+                        <img src="./assets/icons/twitter-fill.svg" alt="twitter-fill">
+                        <hr>
+                        <img src="./assets/icons/youtube-fill.svg" alt="youtube-fill">
+                    </div>
+                </div>
+                <div class="footerBottomWrapperLinksArea">
+                    <h2>QUICK LINK</h2>
+                    <div>
+                        <span>
+                            <a href="#aboutSection">About</a>
+                        </span>
+                        <span>
+                            <a href="#featuresSection">Features</a>
+                        </span>
+                        <span>
+                            <a href="#screenshotSection">Screenshot</a>
+                        </span>
+                        <span>
+                            <a href="#blogSection">Blog</a>
+                        </span>
+                    </div>
+                </div>
+                <div class="footerBottomWrapperNewsLetterArea">
+                    <h1>NEWS LETTER</h1>
+                    <p class="white-paragraphs">Subscribe our newsletter to get our latest
+                        update & news
+                    </p>
+                    <div class="newsLetterInput">
+                        <input type="text" name="" id="" placeholder="Your email adress">
+                        <button><img src="./assets/icons/send-fill.svg" alt="send-fill"></button>
+                    </div>
+                </div>
+            </div>
+            <span class="footerBottomWrapper">
+                <hr>
+                <p class="white-paragraphs">Made whith ❤️ by Pedro Henrique Costa</p>
+            </span>
+        </footer>
     </div>
 </body>
 
