--- a/src/index.html
+++ b/src/index.html
@@ -192,13 +192,13 @@
                         <!-- Additional required wrapper -->
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
-                                <img src="./assets/background/iphone-x.svg" alt="">
+                                <img src="./assets/background/iphone-x.svg" alt="iphone-x">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./assets/background/iphone-003.svg" alt="">
+                                <img src="./assets/background/iphone-003.svg" alt="iphone-003">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./assets/background/iphone-001.svg" alt="">
+                                <img src="./assets/background/iphone-001.svg" alt="iphone-001">
                             </div>
                         </div>
 
@@ -250,6 +250,91 @@
                     </div>
                     <img src="./assets/background/iphone-12-mockup.svg" alt="iphone-12-mockup">
                 </div>
+            </section>
+            <section class="howToUseSection">
+                <main>
+                    <h1>HOW TO USE THE APP PERFECTLY</h1>
+                    <br>
+                    <p class="white-paragraphs">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc
+                        ante velit vitae. Est tellus vitae, nullam lobortis enim. Faucibus amet etiam tincidunt rhoncus,
+                        ullamcorper velit. Ullamcorper risus tempor, ac nunc libero urna, feugiat.</p>
+                </main>
+                <img src="./assets/background/notbook-bg-img.svg" alt="notbook-bg">
+            </section>
+            <section class="ourTeamSection">
+                <span>
+                    <h1>OUR REATIVE TEAM</h1>
+                    <br><br>
+                    <p class="gray-paragraphs">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc
+                        ante velit vitae. Est tellus vitae, nullam lobortis enim. Faucibus amet etiam tincidunt rhoncus,
+                        ullamcorper velit. Ullamcorper risus tempor, ac nunc libero urna, feugiat.</p>
+                </span>
+                <br><br>
+                <main class="teamProfileContainer">
+                    <div class="teamProfileContant">
+                        <img src="./assets/profile-img/carla-img.svg" alt="carla-img">
+                        <br><br><br>
+                        <h1>CARLA PRESS</h1>
+                        <span class="gray-paragraphs">APP DEVELOPER</span>
+                        <br>
+                        <p class="gray-paragraphs">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc
+                            ante velit vitae. Est
+                            tellus vitae.</p>
+                        <br><br>
+                        <div class="teamProfileContantSocialMidias">
+                            <img src="./assets/icons/purple-facebook-fill.svg" alt="purple-facebook-fill">
+                            <hr>
+                            <img src="./assets/icons/black-instagram-fill.svg" alt="instagram-fill">
+                            <hr>
+                            <img src="./assets/icons/black-twitter-fill.svg" alt="twitter-fill">
+                            <hr>
+                            <img src="./assets/icons/black-youtube-fill.svg" alt="youtube-fill">
+                        </div>
+                    </div>
+                    <div class="teamProfileContant">
+                        <img src="./assets/profile-img/craig-img.svg" alt="craig-img">
+                        <br><br><br>
+                        <h1>CRAIG GOUSE</h1>
+                        <span class="gray-paragraphs">UI/UX DESIGNER</span>
+                        <br>
+                        <p class="gray-paragraphs">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc
+                            ante velit vitae. Est
+                            tellus vitae.</p>
+                        <br><br>
+                        <div class="teamProfileContantSocialMidias">
+                            <img src="./assets/icons/black-facebook-fill.svg" alt="purple-facebook-fill">
+                            <hr>
+                            <img src="./assets/icons/black-instagram-fill.svg" alt="instagram-fill">
+                            <hr>
+                            <img src="./assets/icons/black-twitter-fill.svg" alt="twitter-fill">
+                            <hr>
+                            <img src="./assets/icons/black-youtube-fill.svg" alt="youtube-fill">
+                        </div>
+                    </div>
+                    <div class="teamProfileContant">
+                        <img src="./assets/profile-img/jocelyn-img.svg" alt="">
+                        <br><br><br>
+                        <h1>JOCELYN SEPTIMUS</h1>
+                        <span class="gray-paragraphs">APP DEVELOPER</span>
+                        <br>
+                        <p class="gray-paragraphs">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc
+                            ante velit vitae. Est
+                            tellus vitae.</p>
+                        <br><br>
+                        <div class="teamProfileContantSocialMidias">
+                            <img src="./assets/icons/black-facebook-fill.svg" alt="purple-facebook-fill">
+                            <hr>
+                            <img src="./assets/icons/black-instagram-fill.svg" alt="instagram-fill">
+                            <hr>
+                            <img src="./assets/icons/black-twitter-fill.svg" alt="twitter-fill">
+                            <hr>
+                            <img src="./assets/icons/black-youtube-fill.svg" alt="youtube-fill">
+                        </div>
+                    </div>
+                </main>
             </section>
         </main>
         <footer>
