--- a/src/index.html
+++ b/src/index.html
@@ -189,7 +189,6 @@
                 <br><br><br>
                 <div class="appInterfaceSectionMainSlider">
                     <div class="swiper">
-                        <!-- Additional required wrapper -->
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
                                 <img src="./assets/background/iphone-x.svg" alt="iphone-x">
@@ -283,13 +282,20 @@
                             tellus vitae.</p>
                         <br><br>
                         <div class="teamProfileContantSocialMidias">
-                            <img src="./assets/icons/purple-facebook-fill.svg" alt="purple-facebook-fill">
+                            <a href="#"> <img src="./assets/icons/purple-facebook-fill.svg" alt="purple-facebook-fill">
+                            </a>
                             <hr>
-                            <img src="./assets/icons/black-instagram-fill.svg" alt="instagram-fill">
+                            <a href="#">
+                                <img src="./assets/icons/black-instagram-fill.svg" alt="instagram-fill">
+                            </a>
                             <hr>
-                            <img src="./assets/icons/black-twitter-fill.svg" alt="twitter-fill">
+                            <a href="#">
+                                <img src="./assets/icons/black-twitter-fill.svg" alt="twitter-fill">
+                            </a>
                             <hr>
-                            <img src="./assets/icons/black-youtube-fill.svg" alt="youtube-fill">
+                            <a href="#">
+                                <img src="./assets/icons/black-youtube-fill.svg" alt="youtube-fill">
+                            </a>
                         </div>
                     </div>
                     <div class="teamProfileContant">
@@ -304,13 +310,20 @@
                             tellus vitae.</p>
                         <br><br>
                         <div class="teamProfileContantSocialMidias">
-                            <img src="./assets/icons/black-facebook-fill.svg" alt="purple-facebook-fill">
+                            <a href="#"> <img src="./assets/icons/black-facebook-fill.svg" alt="purple-facebook-fill">
+                            </a>
                             <hr>
-                            <img src="./assets/icons/black-instagram-fill.svg" alt="instagram-fill">
+                            <a href="#">
+                                <img src="./assets/icons/black-instagram-fill.svg" alt="instagram-fill">
+                            </a>
                             <hr>
-                            <img src="./assets/icons/black-twitter-fill.svg" alt="twitter-fill">
+                            <a href="#">
+                                <img src="./assets/icons/black-twitter-fill.svg" alt="twitter-fill">
+                            </a>
                             <hr>
-                            <img src="./assets/icons/black-youtube-fill.svg" alt="youtube-fill">
+                            <a href="#">
+                                <img src="./assets/icons/black-youtube-fill.svg" alt="youtube-fill">
+                            </a>
                         </div>
                     </div>
                     <div class="teamProfileContant">
@@ -325,16 +338,79 @@
                             tellus vitae.</p>
                         <br><br>
                         <div class="teamProfileContantSocialMidias">
-                            <img src="./assets/icons/black-facebook-fill.svg" alt="purple-facebook-fill">
+                            <a href="#"> <img src="./assets/icons/black-facebook-fill.svg" alt="purple-facebook-fill">
+                            </a>
                             <hr>
-                            <img src="./assets/icons/black-instagram-fill.svg" alt="instagram-fill">
+                            <a href="#">
+                                <img src="./assets/icons/black-instagram-fill.svg" alt="instagram-fill">
+                            </a>
                             <hr>
-                            <img src="./assets/icons/black-twitter-fill.svg" alt="twitter-fill">
+                            <a href="#">
+                                <img src="./assets/icons/black-twitter-fill.svg" alt="twitter-fill">
+                            </a>
                             <hr>
-                            <img src="./assets/icons/black-youtube-fill.svg" alt="youtube-fill">
+                            <a href="#">
+                                <img src="./assets/icons/black-youtube-fill.svg" alt="youtube-fill">
+                            </a>
                         </div>
                     </div>
                 </main>
+            </section>
+            <section class="ourHappyCostumersSection">
+                <span>
+                    <h1>OUR HAPPY COSTUMERS</h1>
+                    <br><br>
+                    <p class="white-paragraphs">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. At sunt ab facere, dolore vero tempora
+                        natus inventore autem quos dolor recusandae nulla eius nemo, ratione fuga veniam corrupti omnis
+                        impedit.
+                    </p>
+                </span>
+                <br><br><br>
+                <div class="swiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <img src="./assets/profile-img/ann-img.svg" alt="ann-img">
+                            <br><br>
+                            <h1>ANN LUBIN</h1>
+                            <br><br>
+                            <span>CO-FOUNDER</span>
+                            <br><br>
+                            <p class="gray-paragraphs">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae.
+                                Est tellus vitae, nullam lobortis enim. Faucibus amet etiam tincidunt rhoncus,
+                                ullamcorper velit. Ullamcorper risus tempor, ac nunc libero urna, feugiat.
+                            </p>
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="./assets/profile-img/ann-img.svg" alt="ann-img">
+                            <br><br>
+                            <h1>ANN LUBIN</h1>
+                            <br><br>
+                            <span>CO-FOUNDER</span>
+                            <br><br>
+                            <p class="gray-paragraphs">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae.
+                                Est tellus vitae, nullam lobortis enim. Faucibus amet etiam tincidunt rhoncus,
+                                ullamcorper velit. Ullamcorper risus tempor, ac nunc libero urna, feugiat.
+                            </p>
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="./assets/profile-img/ann-img.svg" alt="ann-img">
+                            <br><br>
+                            <h1>ANN LUBIN</h1>
+                            <br><br>
+                            <span>CO-FOUNDER</span>
+                            <br><br>
+                            <p class="gray-paragraphs">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae.
+                                Est tellus vitae, nullam lobortis enim. Faucibus amet etiam tincidunt rhoncus,
+                                ullamcorper velit. Ullamcorper risus tempor, ac nunc libero urna, feugiat.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="swiper-pagination"></div>
+                </div>
             </section>
         </main>
         <footer>
@@ -363,13 +439,21 @@
                         </p>
                     </span>
                     <div class="footerBottomWrapperLogoAreaIcons">
-                        <img src="./assets/icons/purple-facebook-fill.svg" alt="facebook-fill">
+                        <a href="#">
+                            <img src="./assets/icons/purple-facebook-fill.svg" alt="purple-facebook-fill">
+                        </a>
                         <hr>
-                        <img src="./assets/icons/instagram-fill.svg" alt="instagram-fill">
+                        <a href="#">
+                            <img src="./assets/icons/instagram-fill.svg" alt="instagram-fill">
+                        </a>
                         <hr>
-                        <img src="./assets/icons/twitter-fill.svg" alt="twitter-fill">
+                        <a href="#">
+                            <img src="./assets/icons/twitter-fill.svg" alt="twitter-fill">
+                        </a>
                         <hr>
-                        <img src="./assets/icons/youtube-fill.svg" alt="youtube-fill">
+                        <a href="#">
+                            <img src="./assets/icons/youtube-fill.svg" alt="youtube-fill">
+                        </a>
                     </div>
                 </div>
                 <div class="footerBottomWrapperLinksArea">
@@ -390,14 +474,16 @@
                     </div>
                 </div>
                 <div class="footerBottomWrapperNewsLetterArea">
-                    <h1>NEWS LETTER</h1>
-                    <p class="white-paragraphs">Subscribe our newsletter to get our latest
-                        update & news
-                    </p>
-                    <div class="newsLetterInput">
-                        <input type="text" name="" id="" placeholder="Your email adress">
-                        <button><img src="./assets/icons/send-fill.svg" alt="send-fill"></button>
-                    </div>
+                    <form action="">
+                        <h1>NEWS LETTER</h1>
+                        <p class="white-paragraphs">Subscribe our newsletter to get our latest
+                            update & news
+                        </p>
+                        <div class="newsLetterInput">
+                            <input type="text" name="" id="" placeholder="Your email adress">
+                            <button type="submit"><img src="./assets/icons/send-fill.svg" alt="send-fill"></button>
+                        </div>
+                    </form>
                 </div>
             </div>
             <span class="footerBottomWrapper">
