--- a/src/index.html
+++ b/src/index.html
@@ -58,8 +58,9 @@
         <main>
             <section class="homeSection" id="homeSection">
                 <div class="homeSectionLeftWrapper">
+                    <img src="./assets/background/bg-rectangle.svg" alt="bg-rectangle" class="homeSectionLeftWrapperBg">
                     <div class="homeSectionLeftWrapperBoxContant">
-                        <h1>A Great App Makes Your Life Better</h1>
+                        <h1>A GREAT APP MAKES YOUR LIFE BETTERS</h1>
                         <p class="gray-paragraphs">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
                             sint. Velit officia
                             consequat
@@ -68,15 +69,18 @@
                         <div>
                             <h2>DOWNLOAD APP NOW</h2>
                             <div>
-                                <img src="./assets/apps/play-store-app copy.svg" alt="">
-                                <img src="./assets/apps/apple-store-app.svg" alt="">
+                                <a href="#">
+                                    <img src="./assets/apps/play-store-app copy.svg" alt="">
+                                </a>
+                                <a href="#">
+                                    <img src="./assets/apps/apple-store-app.svg" alt="">
+                                </a>
                             </div>
                         </div>
                     </div>
-                    <img src="./assets/background/bg-rectangle.svg" alt="">
                 </div>
                 <div class="homeSectionRigthWrapper">
-                    <img src="./assets/background/mobile-app-mockup.svg" alt="">
+                    <img src="./assets/background/mobile-app-mockup.svg" alt="mobile-app-mockup">
                 </div>
             </section>
             <section class="aboutSection" id="aboutSection">
@@ -475,6 +479,7 @@
                 </main>
             </section>
         </main>
+
         <footer>
             <div class="footerTopWrapper">
                 <div class="footerTopWrapperLeftTextBox">
