feat: about section responsiveness include

--- a/src/index.html
+++ b/src/index.html
@@ -84,22 +84,27 @@
                 </div>
             </section>
             <section class="aboutSection" id="aboutSection">
-                <h1>SOBRE OUR APP</h1>
-                <p class="gray-paragraphs">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante
-                    velit vitae. Est tellus
-                    vitae,
-                    nullam lobortis enim. Faucibus amet etiam tincidunt rhoncus, ullamcorper velit. Ullamcorper risus
-                    tempor, ac nunc libero urna, feugiat. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Viverra
-                    nunc ante velit vitae. Est tellus vitae, nullam lobortis enim. Faucibus amet etiam tincidunt
-                    rhoncus,
-                    ullamcorper velit. Ullamcorper risus tempor, ac nunc libero urna, feugiat.
-                </p>
+                <span>
+                    <h1>SOBRE OUR APP</h1>
+                    <br><br>
+                    <p class="gray-paragraphs">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc
+                        ante
+                        velit vitae. Est tellus
+                        vitae,
+                        nullam lobortis enim. Faucibus amet etiam tincidunt rhoncus, ullamcorper velit. Ullamcorper
+                        risus
+                        tempor, ac nunc libero urna, feugiat. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Viverra
+                        nunc ante velit vitae. Est tellus vitae, nullam lobortis enim. Faucibus amet etiam tincidunt
+                        rhoncus,
+                        ullamcorper velit. Ullamcorper risus tempor, ac nunc libero urna, feugiat.
+                    </p>
+                </span>
                 <div class="aboutSectionBottomContainer">
-                    <div class="aboutSectionBottomContainerLeftWrapper">
-                        <img src="./assets/background/adroid-smartphone-free-mockup.svg"
-                            alt="adroid-smartphone-free-mockup">
-                    </div>
+                    <img src="./assets/background/adroid-smartphone-free-mockup.svg" alt="adroid-smartphone-free-mockup"
+                        class="aboutSectionBottomContainerLeftWrapper">
+                    </img>
+
                     <div class="aboutSectionBottomContainerRigthWrapper">
                         <div class="aboutSectionTextBoxContant">
                             <div>
