feat: features section responsiveness include

--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,7 @@
                 </span>
             </div>
         </header>
+
         <main>
             <section class="homeSection" id="homeSection">
                 <div class="homeSectionLeftWrapper">
@@ -146,12 +147,16 @@
                 </div>
             </section>
             <section class="featuresSection" id="featuresSection">
-                <h1>APP FEATURES</h1>
-                <p class="white-paragraphs">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante
-                    velit vitae. Est tellus
-                    vitae, nullam lobortis enim. Faucibus amet etiam tincidunt rhoncus, ullamcorper velit. Ullamcorper
-                    risus tempor, ac nunc libero urna, feugiat.
-                </p>
+                <span>
+                    <h1>APP FEATURES</h1>
+                    <p class="white-paragraphs">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc
+                        ante
+                        velit vitae. Est tellus
+                        vitae, nullam lobortis enim. Faucibus amet etiam tincidunt rhoncus, ullamcorper velit.
+                        Ullamcorper
+                        risus tempor, ac nunc libero urna, feugiat.
+                    </p>
+                </span>
 
                 <div class="featuresSectionAppInterface">
                     <div class="featuresSectionAppInterfaceSurfacesTextBox text-box1">
@@ -484,85 +489,6 @@
                 </main>
             </section>
         </main>
-
-        <footer>
-            <div class="footerTopWrapper">
-                <div class="footerTopWrapperLeftTextBox">
-                    <span>
-                        <img src="./assets/icons/mail-fill.svg" alt="mail-fill">
-                    </span>
-                    <p>info@youremail.com</p>
-                </div>
-                <hr>
-                <div class="footerTopWrapperRigthTextBox">
-                    <span>
-                        <img src="./assets/icons/phone-fill.svg" alt="mail-fill">
-                    </span>
-                    <p>+880 321 655 9985</p>
-                </div>
-            </div>
-            <div class="footerMainWrapper">
-                <div class="footerBottomWrapperLogoArea">
-                    <span>
-                        <h2>LOGO</h2>
-                        <br>
-                        <p class="white-paragraphs">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra
-                            nunc ante velit vitae. Est tellus vitae, nullam lobortis enim.
-                        </p>
-                    </span>
-                    <div class="footerBottomWrapperLogoAreaIcons">
-                        <a href="#">
-                            <img src="./assets/icons/purple-facebook-fill.svg" alt="purple-facebook-fill">
-                        </a>
-                        <hr>
-                        <a href="#">
-                            <img src="./assets/icons/instagram-fill.svg" alt="instagram-fill">
-                        </a>
-                        <hr>
-                        <a href="#">
-                            <img src="./assets/icons/twitter-fill.svg" alt="twitter-fill">
-                        </a>
-                        <hr>
-                        <a href="#">
-                            <img src="./assets/icons/youtube-fill.svg" alt="youtube-fill">
-                        </a>
-                    </div>
-                </div>
-                <div class="footerBottomWrapperLinksArea">
-                    <h2>QUICK LINK</h2>
-                    <div>
-                        <span>
-                            <a href="#aboutSection">About</a>
-                        </span>
-                        <span>
-                            <a href="#featuresSection">Features</a>
-                        </span>
-                        <span>
-                            <a href="#screenshotSection">Screenshot</a>
-                        </span>
-                        <span>
-                            <a href="#blogSection">Blog</a>
-                        </span>
-                    </div>
-                </div>
-                <div class="footerBottomWrapperNewsLetterArea">
-                    <form action="">
-                        <h1>NEWS LETTER</h1>
-                        <p class="white-paragraphs">Subscribe our newsletter to get our latest
-                            update & news
-                        </p>
-                        <div class="newsLetterInput">
-                            <input type="text" name="" id="" placeholder="Your email adress">
-                            <button type="submit"><img src="./assets/icons/send-fill.svg" alt="send-fill"></button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-            <span class="footerBottomWrapper">
-                <hr>
-                <p class="white-paragraphs">Made whith ❤️ by Pedro Henrique Costa</p>
-            </span>
-        </footer>
 
         <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
         <script src="./js/swiperScript.js"></script>
