feat: how to use section  responsiviness include

--- a/src/index.html
+++ b/src/index.html
@@ -266,6 +266,17 @@
                     </div>
                 </div>
             </section>
+            <section class="howToUseSection">
+                <main>
+                    <h1>HOW TO USE THE APP PERFECTLY</h1>
+                    <br>
+                    <p class="white-paragraphs">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc
+                        ante velit vitae. Est tellus vitae, nullam lobortis enim. Faucibus amet etiam tincidunt rhoncus,
+                        ullamcorper velit. Ullamcorper risus tempor, ac nunc libero urna, feugiat.</p>
+                </main>
+                <img src="./assets/background/notbook-bg-img.svg" alt="notbook-bg">
+            </section>
+
         </main>
 
         <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
