feat: our recent blog section  responsiviness include

--- a/src/index.html
+++ b/src/index.html
@@ -425,9 +425,97 @@
                                 ullamcorper velit. Ullamcorper risus tempor, ac nunc libero urna, feugiat.
                             </p>
                         </div>
+                        <div class="swiper-slide">
+                            <img src="./assets/profile-img/ann-img.svg" alt="ann-img">
+                            <br><br>
+                            <h1>ANN LUBIN</h1>
+                            <br><br>
+                            <span>CO-FOUNDER</span>
+                            <br><br>
+                            <p class="gray-paragraphs">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae.
+                                Est tellus vitae, nullam lobortis enim. Faucibus amet etiam tincidunt rhoncus,
+                                ullamcorper velit. Ullamcorper risus tempor, ac nunc libero urna, feugiat.
+                            </p>
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="./assets/profile-img/ann-img.svg" alt="ann-img">
+                            <br><br>
+                            <h1>ANN LUBIN</h1>
+                            <br><br>
+                            <span>CO-FOUNDER</span>
+                            <br><br>
+                            <p class="gray-paragraphs">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae.
+                                Est tellus vitae, nullam lobortis enim. Faucibus amet etiam tincidunt rhoncus,
+                                ullamcorper velit. Ullamcorper risus tempor, ac nunc libero urna, feugiat.
+                            </p>
+                        </div>
                     </div>
                     <div class="swiper-pagination"></div>
                 </div>
+            </section>
+            <section class="ourRecentBlogSection">
+                <span>
+                    <h1>OUR RECENT BLOG</h1>
+                    <br><br>
+                    <p class="gray-paragraphs">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante
+                        velit vitae. Est tellus vitae, nullam lobortis enim. Faucibus amet etiam tincidunt rhoncus,
+                        ullamcorper velit. Ullamcorper risus tempor, ac nunc libero urna, feugiat.
+                    </p>
+                </span>
+                <br><br>
+                <main class="blogLinkContainer">
+                    <a href="" class="blogLinkContant">
+                        <img src="./assets/blog-imgs/snap-pix.png" alt="snap-pix">
+                        <div>
+                            <br><br>
+                            <h1>
+                                THE SNAP PIXEL: HOW IT WORKS AND HOW TO INSTALL
+                            </h1>
+                            <br><br>
+                            <p class="gray-paragraphs">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae.
+                                Est
+                                tellus vitae, nullam lobortis enim.
+                            </p>
+                            <br><br>
+                        </div>
+                    </a>
+                    <a href="" class="blogLinkContant">
+                        <img src="./assets/blog-imgs/global-partner.png" alt="global-partner">
+                        <div>
+                            <br><br>
+                            <h1>
+                                GLOBAL PARTNER SOLUTIONS: A PARTNERSHIP INOVATION
+                            </h1>
+                            <br><br>
+                            <p class="gray-paragraphs">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae.
+                                Est
+                                tellus vitae, nullam lobortis enim.
+                            </p>
+                            <br><br>
+                        </div>
+                    </a>
+                    <a href="" class="blogLinkContant">
+                        <img src="./assets/blog-imgs/snapchaters-opportunity.png" alt="snapchaters-opportunity">
+                        <div>
+                            <br><br>
+                            <h1>
+                                2021: AN OPPORTUNITY FOR SNAPCHATTERS TO START FRESH
+                            </h1>
+                            <br><br>
+                            <p class="gray-paragraphs">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae.
+                                Est
+                                tellus vitae, nullam lobortis enim.
+                            </p>
+                            <br><br>
+                        </div>
+                    </a>
+                </main>
             </section>
         </main>
 
