feat: footer responsiviness include

--- a/src/index.html
+++ b/src/index.html
@@ -517,6 +517,90 @@
                     </a>
                 </main>
             </section>
+
+            <footer>
+                <div class="footerTopWrapper">
+                    <div class="footerTopWrapperLeftTextBox">
+                        <span>
+                            <img src="./assets/icons/mail-fill.svg" alt="mail-fill">
+                        </span>
+                        <p>info@youremail.com</p>
+                    </div>
+                    <hr>
+                    <div class="footerTopWrapperRigthTextBox">
+                        <span>
+                            <img src="./assets/icons/phone-fill.svg" alt="mail-fill">
+                        </span>
+                        <p>+880 321 655 9985</p>
+                    </div>
+                </div>
+                <div class="footerMainWrapper">
+                    <div class="footerMainWrapperLinksContainer">
+                        <div class="footerBottomWrapperLogoArea">
+                            <span>
+                                <h2>LOGO</h2>
+                                <br>
+                                <p class="white-paragraphs">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    Viverra
+                                    nunc ante velit vitae. Est tellus vitae, nullam lobortis enim.
+                                </p>
+                            </span>
+                            <div class="footerBottomWrapperLogoAreaIcons">
+                                <a href="#">
+                                    <img src="./assets/icons/purple-facebook-fill.svg" alt="purple-facebook-fill">
+                                </a>
+                                <hr>
+                                <a href="#">
+                                    <img src="./assets/icons/instagram-fill.svg" alt="instagram-fill">
+                                </a>
+                                <hr>
+                                <a href="#">
+                                    <img src="./assets/icons/twitter-fill.svg" alt="twitter-fill">
+                                </a>
+                                <hr>
+                                <a href="#">
+                                    <img src="./assets/icons/youtube-fill.svg" alt="youtube-fill">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="footerBottomWrapperLinksArea">
+                            <h2>QUICK LINK</h2>
+                            <br>
+                            <div>
+                                <span>
+                                    <a href="#aboutSection">About</a>
+                                </span>
+                                <span>
+                                    <a href="#featuresSection">Features</a>
+                                </span>
+                                <span>
+                                    <a href="#screenshotSection">Screenshot</a>
+                                </span>
+                                <span>
+                                    <a href="#blogSection">Blog</a>
+                                </span>
+                            </div>
+                        </div>
+                        <div class="footerBottomWrapperNewsLetterArea">
+                            <form action="">
+                                <h2>NEWS LETTER</h2>
+                                <p class="white-paragraphs">Subscribe our newsletter to get our latest
+                                    update & news
+                                </p>
+                                <div class="newsLetterInput">
+                                    <input type="text" name="" id="" placeholder="Your email adress">
+                                    <button type="submit"><img src="./assets/icons/send-fill.svg"
+                                            alt="send-fill"></button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                    <span class="footerBottomWrapper">
+                        <hr>
+                        <p class="white-paragraphs">Made whith ❤️ by Pedro Henrique Costa</p>
+                    </span>
+                </div>
+            </footer>
         </main>
 
         <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
